kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
    group: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        type: db
    spec:
      volumes:                         
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-persistent-volume-claim
      containers:
        - image: mysql:5.6
          name: db
          ports:
            - containerPort: 3306
          volumeMounts:                 
            - name: mysql-storage                
              mountPath: /var/lib/mysql/data   
          resources:
            limits:
              memory: "512Mi"
              cpu: "1500m"
