kubernetes/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels: 
    group: database
spec:
  type: ClusterIP
  selector:           
    app: adminer
  ports:
    - port: 8080          
      targetPort: 8080
