kubernetes/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels: 
    group: database
spec:
  type: ClusterIP
  selector:             
    app: db
  ports:
    - port: 3306  
      targetPort: 3306
